2012-05-09  Andreas Jaeger  <aj@suse.de>

	[BZ #14083]
	* string/bits/string2.h (strspn) [__GNUC_PREREQ(3, 2) &&
	!_HAVE_STRING_ARCH_strspn]: Cast zero to size_t to avoid
	-Wconversion warning.
	(strspn) [!__GNUC_PREREQ(3, 2) && !_HAVE_STRING_ARCH_strspn]:
	Likewise.

2012-05-09  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/locale.h-data (NULL): Use macro-constant.  Require
	== 0.
	(LC_ALL): Use macro-int-constant.
	(LC_COLLATE): Likewise.
	(LC_CTYPE): Likewise.
	(LC_MESSAGES): Likewise.
	(LC_MONETARY): Likewise.
	(LC_NUMERIC): Likewise.
	(LC_TIME): Likewise.
	[ISO || ISO99 || ISO11] (LC_MESSAGES): Do not require.
	(LC_*): Change to LC_[ABCDEFGHIJKLMNOPQRSTUVWXYZ]*.
	[ISO || ISO99 || ISO11] (*_t): Do not allow.
	* conform/data/math.h-data (HUGE_VAL): Use macro-constant.
	Specify type.
	[C99-based standards] (float_t): Expect type.
	[C99-based standards] (double_t): Expect type.
	[C99-based standards] (HUGE_VALF): Use macro-constant.  Specify
	type.
	[C99-based standards] (HUGE_VALL): Likewise.
	[C99-based standards] (INFINITY): Likewise.
	[C99-based standards] (NAN): Likewise.
	[C99-based standards] (FP_INFINITE): Use macro-int-constant.
	[C99-based standards] (FP_NAN): Likewise.
	[C99-based standards] (FP_NORMAL): Likewise.
	[C99-based standards] (FP_SUBNORMAL): Likewise.
	[C99-based standards] (FP_ZERO): Likewise.
	[C99-based standards] (FP_FAST_FMA): Use
	optional-macro-int-constant.  Specify type.  Require == 1.
	[C99-based standards] (FP_FAST_FMAF): Likewise.
	[C99-based standards] (FP_FAST_FMAL): Likewise.
	[C99-based standards] (FP_ILOGB0): Use macro-int-constant.
	[C99-based standards] (FP_ILOGBNAN): Likewise.
	[C99-based standards] (MATH_ERRNO): Use macro-int-constant.
	Specify type.
	[C99-based standards] (MATH_ERREXCEPT): Likewise.
	[C99-based standards] (math_errhandling): Specify type.
	[ISO99 || ISO11] (signgam): Do not allow.
	[non-C99-based standards] (copysignf): Do not allow.
	[non-C99-based standards] (exp2f): Likewise.